@@ -17,6 +17,9 @@ STILL UNDER DEVELOPMENT; NOT RELEASED YET.
   invoke test cases any more, which provides for better modularity,
   extensibility and robustness.
 
+* Optimized the database schema to make report generation almost
+  instantaneous.
+
 * Removed the GDB build-time configuration variable.  This is now part
   of the kyua-testers package.
 
